package com.seucantinho.api.domain.enums;

public enum StatusReservaEnum {
    AGUARDANDO_SINAL,
    CONFIRMADA,
    QUITADA,
    CANCELADA,
    FINALIZADA
}
