package com.seucantinho.api.domain.enums;

public enum TipoPagamentoEnum {
    SINAL,
    QUITACAO,
    TOTAL
}
