package com.seucantinho.api.feature.usuario.domain.enums;

public enum PerfilUsuarioEnum {
    ADMIN,
    FUNCIONARIO,
    CLIENTE
}
